warehouse-database was updated

--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -49,6 +49,6 @@
     <finalName>Warehouse</finalName>
   </build>
   <modules>
-	<module>warehouse-database</module>
+  	<module>../warehouse-database</module>
   </modules>
 </project>
