--- a/warehouse-database/pom.xml
+++ b/warehouse-database/pom.xml
@@ -7,10 +7,9 @@
 		<groupId>Warehouse</groupId>
 		<artifactId>Warehouse</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../warehouse</relativePath>
 	</parent>
-	<groupId>Warehouse</groupId>
 	<artifactId>warehouse-database</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>warehouse-database</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -26,7 +25,7 @@
 				<configuration>
 					<driver>com.mysql.jdbc.Driver</driver>
 					<url>jdbc:mysql://localhost:3306/warehouse</url>
-					<baseDir>src/main/resources/migration</baseDir>
+					<baseDir>migration</baseDir>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -38,5 +37,11 @@
 			<artifactId>flyway-core</artifactId>
 			<version>1.5</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.30</version>
+		</dependency>
+
 	</dependencies>
 </project>
