--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>jersey-json</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.30</version>
+		</dependency>
   </dependencies>
   <build>
     <finalName>Warehouse</finalName>
