Improvements according to first gancherya's comment

--- a/warehouse-database/pom.xml
+++ b/warehouse-database/pom.xml
@@ -19,12 +19,31 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>C:/Users/Denis/warehouse.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>com.googlecode.flyway</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>1.5</version>
 				<configuration>
-					<driver>com.mysql.jdbc.Driver</driver>
-					<url>jdbc:mysql://localhost:3306/warehouse</url>
+					<driver>${jdbc.driver}</driver>
+					<url>${jdbc.url}</url>
 					<baseDir>migration</baseDir>
 				</configuration>
 			</plugin>
