--- a/warehouse/src/main/webapp/WEB-INF/web.xml
+++ b/warehouse/src/main/webapp/WEB-INF/web.xml
@@ -19,10 +19,10 @@
   <servlet>
 		<servlet-name>jersey-serlvet</servlet-name>
 		<servlet-class>
-                     com.sun.jersey.spi.container.servlet.ServletContainer
+                   org.glassfish.jersey.servlet.ServletContainer
                 </servlet-class>
 		<init-param>
-		     <param-name>com.sun.jersey.config.property.packages</param-name>
+		     <param-name>jersey.config.server.provider.packages</param-name>
 		     <param-value>com.rest</param-value>
 		</init-param>
 		
