--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -10,15 +10,22 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<spring.version>4.1.1.RELEASE</spring.version>
+		<spring.version>3.2.3.RELEASE</spring.version>
 		<codehaus.version>1.9.2</codehaus.version>
 		<jersey.version>2.22.2</jersey.version>
 		<mysql.version>5.1.30</mysql.version>
 		<hibernate.version>3.6.9.Final</hibernate.version>
 		<dbcp.version>1.4</dbcp.version>
+		<commons.logging.version>1.1.1</commons.logging.version>
 	</properties>
 
 	<dependencies>
+	
+	<dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>${commons.logging.version}</version>
+	</dependency>
 
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
