--- a/warehouse/src/main/webapp/WEB-INF/web.xml
+++ b/warehouse/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
     </context-param> 
   
   <servlet>
-		<servlet-name>jersey-serlvet</servlet-name>
+		<servlet-name>jersey-servlet</servlet-name>
 		<servlet-class>
                    org.glassfish.jersey.servlet.ServletContainer
                 </servlet-class>
@@ -35,7 +35,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>jersey-serlvet</servlet-name>
+		<servlet-name>jersey-servlet</servlet-name>
 		<url-pattern>/item/*</url-pattern>
 	</servlet-mapping>
   
