pom.xml adjusted to use small letter for artifact name

--- a/warehouse-database/pom.xml
+++ b/warehouse-database/pom.xml
@@ -4,8 +4,8 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>Warehouse</groupId>
-		<artifactId>Warehouse</artifactId>
+		<groupId>warehouse</groupId>
+		<artifactId>warehouse</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../warehouse</relativePath>
 	</parent>
