--- a/warehouse-database/pom.xml
+++ b/warehouse-database/pom.xml
@@ -14,37 +14,33 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<flyway.url>jdbc:mysql://localhost:3306/warehouse</flyway.url>
+		<flyway.user>root</flyway.user>
+		<flyway.password>root</flyway.password>
 	</properties>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<version>1.0-alpha-2</version>
-				<executions>
-					<execution>
-						<phase>initialize</phase>
-						<goals>
-							<goal>read-project-properties</goal>
-						</goals>
-						<configuration>
-							<files>
-								<file>C:/Users/Denis/warehouse.properties</file>
-							</files>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>properties-maven-plugin</artifactId> 
+				<version>1.0-alpha-2</version> <executions> <execution> <phase>initialize</phase> 
+				<goals> <goal>read-project-properties</goal> </goals> <configuration> <files> 
+				<file>C:/Users/Denis/warehouse.properties</file> </files> </configuration> 
+				</execution> </executions> </plugin> -->
 
 			<plugin>
-				<groupId>com.googlecode.flyway</groupId>
+				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
-				<version>1.5</version>
+				<version>3.0</version>
 				<configuration>
-					<driver>${jdbc.driver}</driver>
-					<url>${jdbc.url}</url>
-					<baseDir>migration</baseDir>
+					<url>${flyway.url}</url>
+					<user>${flyway.user}</user>
+					<password>${flyway.password}</password>
+					<locations>
+						<location>filesystem:${project.basedir}/src/main/resources/migration</location>
+					</locations>
+					<driver>com.mysql.jdbc.Driver</driver>
+					<table>SCHEMA_HISTORY</table>
+					<initVersion>0.0</initVersion>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -52,14 +48,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.googlecode.flyway</groupId>
+			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.30</version>
 		</dependency>
 
 	</dependencies>
