--- a/warehouse-database/pom.xml
+++ b/warehouse-database/pom.xml
@@ -43,6 +43,15 @@
 					<initVersion>0.0</initVersion>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                   <source>${java.compiler.version}</source>
+                   <target>${java.compiler.version}</target>
+                </configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
