--- a/warehouse-web/pom.xml
+++ b/warehouse-web/pom.xml
@@ -14,23 +14,12 @@
   <name>warehouse-web Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
-	<properties>
-		<spring.version>3.2.3.RELEASE</spring.version>
-		<codehaus.version>1.9.2</codehaus.version>
-		<jersey.version>2.22.2</jersey.version>
-		<hibernate.version>3.6.9.Final</hibernate.version>
-		<dbcp.version>1.4</dbcp.version>
-		<commons.logging.version>1.1.1</commons.logging.version>
-	</properties>
-
 	<dependencies>
-	
-	<dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>${commons.logging.version}</version>
-	</dependency>
-
+		<dependency>
+   	  	   <groupId>commons-logging</groupId>
+  	      <artifactId>commons-logging</artifactId>
+  	      <version>${commons.logging.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-asl</artifactId>
@@ -74,6 +63,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
 		</dependency>
 
 		<!-- Spring and Transactions -->
