--- a/warehouse-web/src/main/webapp/WEB-INF/web.xml
+++ b/warehouse-web/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
 	<servlet-mapping>
 		<servlet-name>jersey-servlet</servlet-name>
-		<url-pattern>/item/*</url-pattern>
+		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
   
 </web-app>
