--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -12,6 +12,12 @@
 		<mysql.connector.version>5.1.33</mysql.connector.version>
 		<flyway.version>3.2.1</flyway.version>
 		<java.compiler.version>1.7</java.compiler.version>
+		<spring.version>3.2.3.RELEASE</spring.version>
+		<codehaus.version>1.9.2</codehaus.version>
+		<jersey.version>2.22.2</jersey.version>
+		<hibernate.version>3.6.9.Final</hibernate.version>
+		<dbcp.version>1.4</dbcp.version>
+		<commons.logging.version>1.1.1</commons.logging.version>
 	</properties>
 
 	<dependencyManagement>
