--- a/warehouse-web/pom.xml
+++ b/warehouse-web/pom.xml
@@ -2,22 +2,22 @@
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>warehouse</groupId>
-    <artifactId>warehouse</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../warehouse</relativePath>
-  </parent>
-  <artifactId>warehouse-web</artifactId>
-  <packaging>war</packaging>
-  <name>warehouse-web Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>warehouse</groupId>
+		<artifactId>warehouse</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../warehouse</relativePath>
+	</parent>
+	<artifactId>warehouse-web</artifactId>
+	<packaging>war</packaging>
+	<name>warehouse-web Maven Webapp</name>
+	<url>http://maven.apache.org</url>
 
 	<dependencies>
 		<dependency>
-   	  	   <groupId>commons-logging</groupId>
-  	      <artifactId>commons-logging</artifactId>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -89,20 +89,31 @@
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 		</dependency>
+
+		<!-- Unit testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
+
 	</dependencies>
 
-  <build>
-    <finalName>warehouse-web</finalName>
-	<plugins>
-        <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
-                <configuration>
-                   <source>${java.compiler.version}</source>
-                   <target>${java.compiler.version}</target>
-                </configuration>
-        </plugin>
-    </plugins>    
-  </build>
+	<build>
+		<finalName>warehouse-web</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>${java.compiler.version}</source>
+					<target>${java.compiler.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
