--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -19,6 +19,8 @@
 		<hibernate.version>4.1.9.Final</hibernate.version>
 		<dbcp.version>1.4</dbcp.version>
 		<commons.logging.version>1.1.1</commons.logging.version>
+		<junit.version>4.11</junit.version>
+		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
 	<dependencyManagement>
@@ -44,7 +46,7 @@
 				<artifactId>commons-logging</artifactId>
 				<version>${commons.logging.version}</version>
 			</dependency>
-			
+
 			<!-- Jackson -->
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
@@ -66,7 +68,7 @@
 				<artifactId>jackson-xc</artifactId>
 				<version>${codehaus.version}</version>
 			</dependency>
-			
+
 			<!-- Jersey -->
 			<dependency>
 				<groupId>org.glassfish.jersey.core</groupId>
@@ -88,7 +90,7 @@
 				<artifactId>jersey-media-json-jackson</artifactId>
 				<version>${jersey.version}</version>
 			</dependency>
-			
+
 			<!-- Spring -->
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -129,6 +131,19 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate.version}</version>
 			</dependency>
+
+			<!-- Unit testing -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>${mockito.version}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
