--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -21,6 +21,7 @@
 		<commons.logging.version>1.1.1</commons.logging.version>
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.10.19</mockito.version>
+		<jstl.version>1.2</jstl.version>
 	</properties>
 
 	<dependencyManagement>
@@ -114,6 +115,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
 				<artifactId>spring-framework-bom</artifactId>
 				<version>4.0.3.RELEASE</version>
 				<type>pom</type>
@@ -142,6 +148,12 @@
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>${mockito.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>jstl</groupId>
+				<artifactId>jstl</artifactId>
+				<version>${jstl.version}</version>
 			</dependency>
 
 		</dependencies>
