--- a/warehouse-web/src/main/webapp/WEB-INF/web.xml
+++ b/warehouse-web/src/main/webapp/WEB-INF/web.xml
@@ -13,9 +13,11 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring.xml</param-value>
+        <param-value>classpath:spring.xml
+			/WEB-INF/security.xml
+		</param-value>
     </context-param>
-  
+
   <servlet>
 		<servlet-name>jersey-servlet</servlet-name>
 		<servlet-class>
@@ -52,5 +54,14 @@
 		<servlet-name>mvc</servlet-name>
 		<url-pattern>/ui/*</url-pattern>
 	</servlet-mapping>
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 </web-app>
